--- a/EXPLORATION_DATA.ipynb
+++ b/EXPLORATION_DATA.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,57 +184,9 @@
        "      <td>0.01</td>\n",
        "      <td>0.99</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MCO518249626</td>\n",
-       "      <td>MCO</td>\n",
-       "      <td>Virgen De Guadalupe En Yeso</td>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>COP</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>buy_it_now</td>\n",
-       "      <td>gold_special</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5_green</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>22</td>\n",
-       "      <td>263</td>\n",
-       "      <td>285</td>\n",
-       "      <td>historic</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MCO551507494</td>\n",
-       "      <td>MCO</td>\n",
-       "      <td>Caja Separador Plástica 10 Huecos</td>\n",
-       "      <td>3500.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>COP</td>\n",
-       "      <td>250</td>\n",
-       "      <td>5</td>\n",
-       "      <td>buy_it_now</td>\n",
-       "      <td>gold_special</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5_green</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55</td>\n",
-       "      <td>55</td>\n",
-       "      <td>historic</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>3 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -242,68 +194,52 @@
        "0  MCO589643727            MCO   \n",
        "1  MCO608034473            MCO   \n",
        "2  MCO535934227            MCO   \n",
-       "3  MCO518249626            MCO   \n",
-       "4  MCO551507494            MCO   \n",
        "\n",
        "                                        object_title  object_price  \\\n",
        "0  Soplete Cohiba Encendedor Recargable Premiun  ...      184900.0   \n",
        "1                              Estearato De Magnesio       68000.0   \n",
        "2  Escapulario En Acero Dorado De La Virgen Del C...       28000.0   \n",
-       "3                        Virgen De Guadalupe En Yeso        9000.0   \n",
-       "4                 Caja Separador Plástica 10 Huecos         3500.0   \n",
        "\n",
        "   object_sale_price object_currency_id  object_available_quantity  \\\n",
        "0                NaN                COP                          1   \n",
        "1                NaN                COP                        150   \n",
        "2                NaN                COP                          1   \n",
-       "3                NaN                COP                          1   \n",
-       "4                NaN                COP                        250   \n",
        "\n",
        "   object_sold_quantity object_buying_mode object_listing_type_id  ...  \\\n",
        "0                     5         buy_it_now           gold_special  ...   \n",
        "1                     4         buy_it_now               gold_pro  ...   \n",
        "2                    25         buy_it_now               gold_pro  ...   \n",
-       "3                     5         buy_it_now           gold_special  ...   \n",
-       "4                     5         buy_it_now           gold_special  ...   \n",
        "\n",
        "  ship_storepickup seller_level seller_power_status  \\\n",
        "0            False      5_green              silver   \n",
        "1            False      5_green            platinum   \n",
        "2            False      5_green              silver   \n",
-       "3            False      5_green                 NaN   \n",
-       "4            False      5_green                 NaN   \n",
        "\n",
        "  sellertransactions_canceled sellertransactions_completed  \\\n",
        "0                           1                          140   \n",
        "1                         225                         8995   \n",
        "2                          69                         2052   \n",
-       "3                          22                          263   \n",
-       "4                           0                           55   \n",
        "\n",
        "   sellertransactions_total  sellertransactions_period sellerrating_negative  \\\n",
        "0                       141                   historic                  0.00   \n",
        "1                      9220                   historic                  0.02   \n",
        "2                      2121                   historic                  0.00   \n",
-       "3                       285                   historic                  0.00   \n",
-       "4                        55                   historic                  0.00   \n",
        "\n",
        "   sellerrating_neutral sellerrating_positive  \n",
        "0                  0.04                  0.96  \n",
        "1                  0.01                  0.97  \n",
        "2                  0.01                  0.99  \n",
-       "3                  0.01                  0.99  \n",
-       "4                  0.00                  1.00  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.head(5)"
+    "dataset.head(3)"
    ]
   },
   {
@@ -637,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -686,44 +622,8 @@
        "      <td>MCO581996640</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13213</th>\n",
-       "      <td>MCO581978067</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5439</th>\n",
-       "      <td>MCO535395714</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11444</th>\n",
-       "      <td>MCO573979010</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11351</th>\n",
-       "      <td>MCO573491624</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1816</th>\n",
-       "      <td>MCO466476322</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16020</th>\n",
-       "      <td>MCO595399138</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1281 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -731,19 +631,10 @@
        "2      MCO443357568      2\n",
        "13260  MCO582152367      2\n",
        "13221  MCO581996711      2\n",
-       "13217  MCO581996640      2\n",
-       "13213  MCO581978067      2\n",
-       "...             ...    ...\n",
-       "5439   MCO535395714      3\n",
-       "11444  MCO573979010      3\n",
-       "11351  MCO573491624      3\n",
-       "1816   MCO466476322      3\n",
-       "16020  MCO595399138      3\n",
-       "\n",
-       "[1281 rows x 2 columns]"
+       "13217  MCO581996640      2"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,12 +642,12 @@
    "source": [
     "p = dataset.reset_index().groupby('object_id').index.nunique().reset_index()\n",
     "dupli=p.loc[p['index'] > 1].sort_values('index')\n",
-    "dupli"
+    "dupli.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +675,7 @@
        "      <th>object_site_id</th>\n",
        "      <th>object_title</th>\n",
        "      <th>object_price</th>\n",
+       "      <th>object_sale_price</th>\n",
        "      <th>object_currency_id</th>\n",
        "      <th>object_available_quantity</th>\n",
        "      <th>object_sold_quantity</th>\n",
@@ -826,6 +718,7 @@
        "      <td>MCO</td>\n",
        "      <td>Maquina Peluqueria Corte Cabello Motilar Barbe...</td>\n",
        "      <td>44900.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>COP</td>\n",
        "      <td>1</td>\n",
        "      <td>500</td>\n",
@@ -866,6 +759,7 @@
        "      <td>MCO</td>\n",
        "      <td>Maquina Peluqueria Corte Cabello Motilar Barbe...</td>\n",
        "      <td>44900.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>COP</td>\n",
        "      <td>1</td>\n",
        "      <td>500</td>\n",
@@ -906,6 +800,7 @@
        "      <td>MCO</td>\n",
        "      <td>Aerografo Tipo Lapicero Profesional Bd-128</td>\n",
        "      <td>89900.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>COP</td>\n",
        "      <td>1</td>\n",
        "      <td>200</td>\n",
@@ -946,6 +841,7 @@
        "      <td>MCO</td>\n",
        "      <td>Aerografo Tipo Lapicero Profesional Bd-128</td>\n",
        "      <td>89900.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>COP</td>\n",
        "      <td>1</td>\n",
        "      <td>200</td>\n",
@@ -997,23 +893,29 @@
        "9833          Aerografo Tipo Lapicero Profesional Bd-128       89900.0   \n",
        "13402         Aerografo Tipo Lapicero Profesional Bd-128       89900.0   \n",
        "\n",
-       "      object_currency_id  object_available_quantity  object_sold_quantity  \\\n",
-       "17990                COP                          1                   500   \n",
-       "11431                COP                          1                   500   \n",
-       "9833                 COP                          1                   200   \n",
-       "13402                COP                          1                   200   \n",
+       "       object_sale_price object_currency_id  object_available_quantity  \\\n",
+       "17990                NaN                COP                          1   \n",
+       "11431                NaN                COP                          1   \n",
+       "9833                 NaN                COP                          1   \n",
+       "13402                NaN                COP                          1   \n",
        "\n",
-       "      object_buying_mode object_listing_type_id          object_stop_time  \\\n",
-       "17990         buy_it_now           gold_special  2040-10-15T10:02:56.000Z   \n",
-       "11431         buy_it_now           gold_special  2040-10-15T10:02:56.000Z   \n",
-       "9833          buy_it_now               gold_pro  2041-03-30T13:04:21.000Z   \n",
-       "13402         buy_it_now               gold_pro  2041-03-30T13:04:21.000Z   \n",
+       "       object_sold_quantity object_buying_mode object_listing_type_id  \\\n",
+       "17990                   500         buy_it_now           gold_special   \n",
+       "11431                   500         buy_it_now           gold_special   \n",
+       "9833                    200         buy_it_now               gold_pro   \n",
+       "13402                   200         buy_it_now               gold_pro   \n",
        "\n",
-       "      object_condition                                   object_permalink  \\\n",
-       "17990              new  https://articulo.mercadolibre.com.co/MCO-44335...   \n",
-       "11431              new  https://articulo.mercadolibre.com.co/MCO-44335...   \n",
-       "9833               new  https://articulo.mercadolibre.com.co/MCO-44544...   \n",
-       "13402              new  https://articulo.mercadolibre.com.co/MCO-44544...   \n",
+       "               object_stop_time object_condition  \\\n",
+       "17990  2040-10-15T10:02:56.000Z              new   \n",
+       "11431  2040-10-15T10:02:56.000Z              new   \n",
+       "9833   2041-03-30T13:04:21.000Z              new   \n",
+       "13402  2041-03-30T13:04:21.000Z              new   \n",
+       "\n",
+       "                                        object_permalink  \\\n",
+       "17990  https://articulo.mercadolibre.com.co/MCO-44335...   \n",
+       "11431  https://articulo.mercadolibre.com.co/MCO-44335...   \n",
+       "9833   https://articulo.mercadolibre.com.co/MCO-44544...   \n",
+       "13402  https://articulo.mercadolibre.com.co/MCO-44544...   \n",
        "\n",
        "                                        object_thumbnail  \\\n",
        "17990  http://http2.mlstatic.com/D_730000-MCO43668937...   \n",
@@ -1076,7 +978,7 @@
        "13402    2.0  "
       ]
      },
-     "execution_count": 264,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1139,70 +1041,25 @@
        "      <td>Construcción</td>\n",
        "      <td>MCO445441242</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7237</th>\n",
-       "      <td>Instrumentos Musicales</td>\n",
-       "      <td>MCO446498269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14166</th>\n",
-       "      <td>Consolas y Videojuegos</td>\n",
-       "      <td>MCO617420637</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1871</th>\n",
-       "      <td>Salud y Equipamiento Médico</td>\n",
-       "      <td>MCO618711793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8390</th>\n",
-       "      <td>Industrias y Oficinas</td>\n",
-       "      <td>MCO618711793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13493</th>\n",
-       "      <td>Consolas y Videojuegos</td>\n",
-       "      <td>MCO626219208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13724</th>\n",
-       "      <td>Consolas y Videojuegos</td>\n",
-       "      <td>MCO626219208</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2578 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             General_category_name     object_id\n",
-       "17990   Belleza y Cuidado Personal  MCO443357568\n",
-       "11431            Electrodomésticos  MCO443357568\n",
-       "9833                  Herramientas  MCO445441242\n",
-       "13402                 Construcción  MCO445441242\n",
-       "7237        Instrumentos Musicales  MCO446498269\n",
-       "...                            ...           ...\n",
-       "14166       Consolas y Videojuegos  MCO617420637\n",
-       "1871   Salud y Equipamiento Médico  MCO618711793\n",
-       "8390         Industrias y Oficinas  MCO618711793\n",
-       "13493       Consolas y Videojuegos  MCO626219208\n",
-       "13724       Consolas y Videojuegos  MCO626219208\n",
-       "\n",
-       "[2578 rows x 2 columns]"
+       "            General_category_name     object_id\n",
+       "17990  Belleza y Cuidado Personal  MCO443357568\n",
+       "11431           Electrodomésticos  MCO443357568\n",
+       "9833                 Herramientas  MCO445441242\n",
+       "13402                Construcción  MCO445441242"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seedupli[['General_category_name','object_id']].sort_values('object_id')"
+    "seedupli[['General_category_name','object_id']].sort_values('object_id').head(4)"
    ]
   },
   {
